# hyprspace

./: Cargo.toml  LICENSE  readme.md  spec.md
src/: cli.rs  error.rs  main.rs
src/commands/: daemonize.rs  mod.rs
src/system/: hyprspace.rs  mod.rs  request.rs  response.rs  system.rs
src/unix_socket/: client.rs  mod.rs  server.rs
